src/App.css
@font-face {
  font-family: "Deliveroo-1";
  src: url("./assets/deliveroo-fonts/IBMPlexSans-Bold.eot") format
      ("embedded-opentype"),
    url("./assets/deliveroo-fonts/IBMPlexSans-Bold.woff") format (".woff"),
    url("./assets/deliveroo-fonts/IBMPlexSans-Bold.woff2") format (".woff2"),
    url("./assets/deliveroo-fonts/IBMPlexSans-Bold.ttf") format ("truetype"),
    url("./assets/deliveroo-fonts/IBMPlexSans-Bold.svg") format ("svg");
  font-weight: bold;
  font-style: bold;
  font-display: swap;
}

@font-face {
  font-family: "Deliveroo-2";
  src: url("./assets/deliveroo-fonts/IBMPlexSans-Bold.eot") format
      ("embedded-opentype"),
    url("./assets/deliveroo-fonts/IBPMlexSans.woff") format (".woff"),
    url("./assets/deliveroo-fonts/IBPMlexSans.woff2") format (".woff2"),
    url("./assets/deliveroo-fonts/IBPMlexSans.ttf") format ("truetype"),
    url("./assets/deliveroo-fonts/IBPMlexSans.svg") format ("svg");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

/* COMMON RULES */
body {
  background-color: #f3f5f5;
  font-family: "Deliveroo-1", sans-serif;
}

img {
  border-radius: 5px;
}

header {
  background-color: white;
}

.container {
  width: 1280px;
  margin: 0 auto;
}

h1 {
  font-size: 30px;
  line-height: 48px;
  margin-bottom: 24px;
  font-weight: bold;
}

h2 {
  font-size: 26px;
  line-height: 30px;
  font-weight: bold;
  margin-bottom: 24px;
}

h3 {
  font-size: 19px;
  font-weight: normal;
  line-height: 25px;
  margin-bottom: 8px;
}

p {
  color: gray;
}

/* -------------- */
/* -------------- HEADER  */
/* -------------- */

header div {
  display: flex;
  padding: 32px 0;
}

header div > img {
  width: 350px;
  margin-left: 56px;
}

header aside p {
  font-size: 20px;
  line-height: 30px;
}
/* -------------- */
/* -------------- MAIN */
/* -------------- * */
main {
  display: flex;
  justify-content: space-between;
  padding: 32px 0;
}

/* --- Shopping cart --- */

main aside {
  box-shadow: 0 22px 24px 0 rgba(46, 51, 51, 0.07);
  background-color: white;
  width: 350px;
  /* min-height: 200px;*/
  max-height: 370px;
  padding: 12px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  position: sticky;
  top: 0;
}

main aside div > div > span {
  color: gray;
}

.empty-cart {
  text-align: center;
  padding: 32px 0;
}

.not-confirmed-yet,
.confirmed {
  width: 100%;
  border: none;
  border-radius: 5px;
  font-weight: 700;
  font-size: 16px;
  padding: 1rem;
}

.not-confirmed-yet {
  background-color: #bac3c3;
  color: #8a9b9b;
  cursor: not-allowed;
}

.confirmed {
  background-color: #01ccbd;
  color: white;
  cursor: pointer;
}

.summary {
  max-height: 160px;
  font-size: 15px;
  overflow-y: auto;
  border-bottom: 0.5px solid lightgrey;
}

.cart-line {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 16px 0;
}

.cart-line span,
.align-info p,
.align-info span,
.total p,
.total span {
  color: #2e3333;
}

.cart-line span:nth-of-type(3) {
  margin-left: auto;
}

.cart-line span:not(:last-child) {
  margin: 0 8px;
}

.quantity {
  border: 1px solid #01ccbd;
  color: #01ccbd;
  border-radius: 50%;
  background-color: white;
  cursor: pointer;
}

.meal-info {
  display: flex;
  justify-content: space-between;
}

.align-info {
  display: flex;
  justify-content: space-between;
}

.align-info p,
.align-info span {
  font-size: 15px;
  padding: 8px 0;
}

.align-info:nth-of-type(3),
.subtotal-and-deliveryfees {
  border-bottom: 0.5px solid lightgrey;
}

.subtotal-and-deliveryfees {
  margin: 8px 0;
}

.total {
  display: flex;
  justify-content: space-between;
  padding: 1.3rem 0;
}

.total p,
.total span {
  font-size: 19px;
  font-weight: 600;
}

/* --- meals' list --- */

main section {
  display: flex;
  gap: 24px;
  flex: 1;
  flex-wrap: wrap;
  margin-bottom: 40px;
}

article {
  width: 70%;
}

menu {
  background-color: white;
  border-radius: 5px;
  padding: 16px;
  display: flex;
  flex-shrink: 0;
  justify-content: space-between;
  height: 130px;
  width: 45.091%;
}

menu img {
  width: 120px;
  height: 120px;
  object-fit: cover;
  margin-left: 24px;
}

main p {
  font-size: 13.4px;
  line-height: 20px;
}

menu:hover {
  box-shadow: 0 22px 24px 0 rgba(46, 51, 51, 0.07);
  cursor: pointer;
}

menu div {
  display: flex;
  flex-direction: column;
}

menu div > span:nth-of-type(1) {
  color: #808484;
}

.price-and-popularity {
  display: flex;
  flex-direction: row;
  margin-top: auto;
}

.popular {
  color: #e67400;
  margin-left: 8px;
}

.description {
  line-height: 20px;
  height: 40px;
  overflow-y: hidden;
}

